<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Benh An Dien Tu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tvchangepass">Change your Password</string>
    <string name="tvnewpass">New Password</string>
    <string name="btchangepass">Change Password</string>
    <string name="btcancel">Cancel</string>
    <string name="hintnewpass">New Password</string>
    <string name="tvwelcome">Welcome to BK Medical</string>
    <string name="tvemail">Email</string>
    <string name="tvpass">Password</string>
    <string name="btregister">Register</string>
    <string name="btlogin">Login</string>
    <string name="btforgot">Forgot Password</string>
    <string name="hintemail">E-mail</string>
    <string name="hintfirst">First Name</string>
    <string name="hintlast">Last Name</string>
    <string name="hintuser">Username</string>
    <string name="hintadd">Address</string>
    <string name="hintphone">Phone number</string>
    <string name="hintpass">Password</string>
    <string name="hintbirthyear">Birth year</string>
    <string name="btlogout">Logout</string>
    <string name="btallrecord">All Records</string>
    <string name="btsetexam">Set Examination</string>
    <string name="tvuserpanel">User Panel</string>
    <string name="tvresetpass">Reset your Password</string>
    <string name="tventeremail">Enter your Email Id</string>
    <string name="btreset">Reset</string>
    <string name="btback">Back to Login</string>
    <string name="tvfirstname">First Name</string>
    <string name="tvlastname">Last Name</string>
    <string name="tvusername">Username</string>
    <string name="tvadd">Address</string>
    <string name="tvphone">Phone</string>
    <string name="tvregtime">Registered at</string>
    <string name="tvcongra">Congratulations. You have Successfully Registered</string>
    <string name="tvregdetail">Your Registration Details</string>
    <string name="cbliver">Liver Examination</string>
    <string name="cbblood">Blood Examination</string>
    <string name="cburine">Urine Examination</string>
    <string name="btcheck">Check</string>
    <string name="tvauthor">Tuan.N.M</string>
    <string name="tvcopyright">Copyright © 2014</string>
    <string name="tvmainmenu">MAIN MENU</string>
    <string name="tvhelp">HELP</string>
    <string name="tvlanguage">Select Language</string>
    <string-array name="languages">	 
        <item> </item>
	    <item>English</item>
	    <item>VietNam</item>
	    <item>Japan</item>
	</string-array>
	<string name="menuloign">Login</string>
	<string name="menusetting">Setting</string>
	<string name="menuhelp">Help</string>
	<string name="menuexit">Exit</string>
	<string name="exitwarning">Do you really want to exit</string>
	<string name="passwarning">Password field empty</string>
	<string name="emailwarning">Email field empty</string>
	<string name="allwarning">Email and Password field are empty</string>
	<string name="networkwarning">Error in Network Connection</string>
	<string name="invalid">Incorrect username/password</string>
	<string name="contact">Contacting Servers</string>
	<string name="login">Logging in</string>
	<string name="loaduser">Loading User Space</string>
	<string name="getdata">Getting Data</string>
	<string name="show">Showing</string>
	
	<string name="welcome">Welcome</string>
	<string name="emailconfirm">A recovery email is sent to you, see it for more details.</string>
	<string name="emailinvalid">Your email does not exist in our database.</string>
	<string name="emailerror">Error occurred in changing Password</string>
	
	<string name="usernamewarning">Username should be minimum 5 characters</string>
	<string name="emptyfieldwarning">One or more fields are empty</string>
	<string name="register">Registering</string>
	<string name="loadinfor">Loading Info</string>
	<string name="registersuccess">Successfully Registered</string>
	<string name="userexists">User already exists</string>
	<string name="invalidemailid">Invalid Email id</string>
	<string name="registererror">Error occurred in registration</string>
	
	<string name="examcreate">Creating Exam</string>
	<string name="examwarning">You have to choose at least one exam</string>
	<string name="examconfirm">You have choiced</string>
	<string name="examliver">Liver Exam</string>
	<string name="examblood">Blood Exam</string>
	<string name="examurine">Urine Exam</string>
	
	<string name="check">Checking Network</string>
	<string name="load">Loading</string>
	<string name="tvbirthyear">Birth Year</string>

</resources>