<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/tvwelcome"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView"
        android:text="@string/tvfirstname"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:hint="@string/hintfirst"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/textView"
        android:text="@string/tvlastname"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:hint="@string/hintlast"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/tvemail"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lname"
        android:ems="10"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvLname"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/tvEmail"
        android:layout_below="@+id/tvEmail"
        android:text="@string/tvusername"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/uname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvLname"
        android:hint="@string/hintuser"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/uname"
        android:layout_below="@+id/tvLname"
        android:ems="10"
        android:hint="@string/hintpass"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvUrine"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/tvLname"
        android:layout_alignTop="@+id/pword"
        android:text="@string/tvpass"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/register_error"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/tvUrine"
        android:layout_below="@+id/tvUrine"
        android:text="@string/tvadd"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/pword"
        android:layout_alignTop="@+id/textView1"
        android:ems="10"
        android:hint="@string/hintadd"
        android:textSize="15sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/bktologin"
        android:layout_alignBottom="@+id/bktologin"
        android:layout_toLeftOf="@+id/bktologin"
        android:background="@drawable/rectangle"
        android:text="@string/btregister"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/bktologin"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/rectangle"
        android:text="@string/btback"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/tvphone"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/address"
        android:layout_alignTop="@+id/textView4"
        android:ems="10"
        android:hint="@string/hintphone"
        android:inputType="phone"
        android:textSize="15sp" >
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/tvbirthyear"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/birthyear"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView5"
        android:ems="10"
        android:hint="@string/hintbirthyear"
        android:textSize="15sp" />

</RelativeLayout>