<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    android:padding="20dp" 
    xmlns:tools="http://schemas.android.com/tools">

    <CheckBox
        android:id="@+id/cbLiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbliver" />

    <CheckBox
        android:id="@+id/cbBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbblood" />

    <CheckBox
        android:id="@+id/cbUrine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cburine" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle"
            android:text="@string/btcheck"
            android:textColor="#FFFFFF" 
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btSetExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:text="@string/btsetexam"
            android:textColor="#FFFFFF" 
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>