<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/tvcongra"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/tvregdetail"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/tvfirstname"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvLname"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/fname"
        android:text="@string/tvlastname"
        android:textColor="#000000"
        android:textSize="15sp" 
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/lname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/tvLname"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvLname"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/tvemail"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/fname"
        android:layout_below="@+id/tvLname"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView7"
        android:text="@string/tvusername"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/uname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView9"
        android:layout_toLeftOf="@+id/uname"
        android:text="@string/tvregtime"
        android:textColor="#000000"
        android:textSize="15sp" 
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/regat"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/lname"
        android:layout_below="@+id/textView9"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:text="@string/tvadd"
        android:textColor="#000000"
        android:textSize="15sp" 
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tvadd"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/regat"
        android:layout_toRightOf="@+id/textView1"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/tvphone"
        android:textColor="#000000"
        android:textSize="15sp" 
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tvphone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/tvadd"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView4"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/login"
        android:layout_below="@+id/tvphone"
        android:text="@string/tvbirthyear"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvBirthyear"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/tvphone"
        android:layout_below="@+id/textView4"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvBirthyear"
        android:text="@string/btback"
        android:textColor="#000000"
        android:textSize="13sp" />

</RelativeLayout>