<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" 
    android:background="@drawable/background_color"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tvresetpass"
        android:textColor="#000000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/tventeremail"
        android:textColor="#000000"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/forpas"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:hint="@string/hintemail"
        android:textColor="#000000" 
        android:background="@drawable/round_corner"/>

    <TextView
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/respass"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bktolog"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/alert"
        android:layout_below="@+id/forpas"
        android:layout_marginTop="22dp"
        android:background="@drawable/rectangle"
        android:text="@string/btback"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/respass"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/bktolog"
        android:layout_alignBottom="@+id/bktolog"
        android:layout_alignLeft="@+id/alert"
        android:background="@drawable/rectangle"
        android:text="@string/btreset"
        android:textColor="#FFFFFF" />

</RelativeLayout>