<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" 
    android:background="@drawable/background_color">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tvchangepass"
        android:textColor="#000000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView"
        android:text="@string/tvnewpass"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btchangepass"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:background="@drawable/rectangle"
        android:text="@string/btchangepass"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/alertpass"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btchangepass"
        android:textColor="#FF3200" />

    <Button
        android:id="@+id/btcancel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/btchangepass"
        android:layout_alignBottom="@+id/btchangepass"
        android:layout_alignParentRight="true"
        android:background="@drawable/rectangle"
        android:text="@string/btcancel"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/newpass"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/btcancel"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:hint="@string/hintnewpass"
        android:inputType="textPassword"
        android:textColor="#000000" />

</RelativeLayout>